# 42-minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  parse.c  test.c  tmp
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/: Makefile  pain.sh  supp
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/environ/src/: p_environ.h
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/execute/: CMakeLists.txt
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/execute/src/: p_execute.h
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/execute/src/builtin/: builtin.h  cmd_env.c  cmd_exit.c  cmd_export.c  cmd_pwd.c  cmd_unset.c
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/get_next_line/: CMakeLists.txt  get_next_line.h
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/libft/: ft_atoi.c  ft_strncpy.c  ft_strsub_or_die.c  libft.h
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/parse/src/: parse_cmd.c  parse_debug.c  parse_expand_2.c  parse_free.c  parse_token.c
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/tokenize/: tokenize.h
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/lib/tokenize/src/: tokenize.c  tokenize_error.c
intra-uuid-6d08108e-0c26-477f-8fda-4c64a3e4282b-4372133-pfuchs/src/: heredoc.c  heredoc_2.c  minishell.h
lib/: CMakeLists.txt
lib/environ/: CMakeLists.txt  environ.h
lib/environ/src/: env.c  env_modify.c  env_util.c  environ.c  environ.h  environ_2.c
lib/execute/: CMakeLists.txt  execute.h
lib/execute/src/: child_redirect.c  child_run.c  exec_or_die.c  execute.c  execute.h  execute2.c  exev_util.c
lib/execute/src/builtin/: builtin.c  builtin.h  cmd_cd.c  cmd_echo.c  cmd_env.c  cmd_exit.c  cmd_export.c  cmd_pwd.c  cmd_unset.c
lib/get_next_line/: get_next_line.c  get_next_line.h
lib/libft/: CMakeLists.txt  ft_calloc.c  ft_calloc_or_die.c  ft_strsub_or_die.c  libft.h
lib/parse/: CMakeLists.txt  parse.h
lib/parse/src/: p_parse.h  parse.c  parse.h  parse_cmd.c  parse_debug.c  parse_expand.c  parse_free.c  parse_split.c  parse_token.c
lib/readline/: CMakeLists.txt
lib/tokenize/: CMakeLists.txt  tokenize.h
lib/tokenize/src/: p_tokenize.h  tokenize.c  tokenize.h  tokenize_debug.c  tokenize_error.c  tokenize_get.c  tokenize_lst.c  tokenize_split.c
src/: CMakeLists.txt  heredoc.c  main.c  minishell.c  minishell.h  signal.c
src/builtin/: builtin.h
tests/: tester.sh
