add_library(libft STATIC
  ft_atoi.c
  ft_calloc_or_die.c
  ft_calloc.c
  ft_free_pointer_array.c
  ft_isalnum.c
  ft_isalpha.c
  ft_isascii.c
  ft_isdigit.c
  ft_isprint.c
  ft_itoa.c
  ft_memchr.c
  ft_memcmp.c
  ft_memcpy.c
  ft_memmove.c
  ft_memset.c
  ft_strcat.c
  ft_strchr.c
  ft_strcpy.c
  ft_strdup.c
  ft_strjoin_array.c
  ft_strjoin.c
  ft_strlcat.c
  ft_strlcpy.c
  ft_strlen.c
  ft_strncmp.c
  ft_strncpy.c
  ft_strnstr.c
  ft_strrchr.c
  ft_strsplit.c
  ft_strsub_or_die.c
  ft_strsub.c
  ft_strtrim.c
  ft_tolower.c
  ft_toupper.c
  libft.h
)
